# Marionette

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  instances.txt
docs/specs/: worker-on-slices-harness.md
marionette/: __init__.py  accounting.py  config.py  dataset.py  grading.py  images.py  msa_adapter.py  orchestrator.py  plot.py  prompts.py  results.py  run.py  slice_cache.py  types.py  worker.py
marionette/mock/: __init__.py  environment.py  fixtures.py  model.py
tests/: test_accounting.py  test_dataset_filter.py  test_grading_parse.py  test_plot_smoke.py  test_results_schema.py  test_slice_cache.py  test_worker_dryrun.py
