[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marionette"
version = "0.1.0"
description = "Worker-on-slices cost/accuracy harness for SWE-bench: a fixed orchestrator decomposes issues into slices that a cheap worker resolves."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mini-swe-agent==2.4.2",
    "swebench>=4.1,<5",
    "litellm>=1.75.5",
    "datasets",
    "typer>=0.12",
    "pyyaml",
    "matplotlib",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
marionette = "marionette.run:app"

[tool.setuptools.packages.find]
include = ["marionette*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# typer uses function calls (Option/Argument) as parameter defaults by design.
"marionette/run.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
disable_error_code = ["import-untyped"]
